--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,3 +3,19 @@
   background-color: #e5017d;
   line-height:2.2rem;
 }
+.icon-info{
+  width: 2rem;
+  height: 2rem;
+  padding-top: .2rem;
+  padding-left: .3rem;
+}
+.search-input{
+  width:100%;
+  height: 1.3rem;
+  border-top:0px;
+  border-left:0px;
+  border-right:0px;
+  border-bottom: 1px solid 1px !important ;
+  background-color: #e5017d;
+  color:#fff;
+}
