--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -19,3 +19,12 @@
   background-color: #e5017d;
   color:#fff;
 }
+.swiper-area{
+  width:20rem;
+  clear:both;
+  max-height:15rem;
+  overflow: hidden;
+}
+.search-bar{
+  overflow: hidden;
+}
